plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.3'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'es.andim'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

jar {
	enabled = false // Disabling the creation of the plain jar file, not the bootable jar
	manifest {
		attributes 'Main-Class': 'es.andim.asos.AsosApplication'
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator:3.0.4'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.5'
	implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.5'
	implementation 'org.apache.commons:commons-lang3:3.12.0'
	implementation 'org.postgresql:postgresql:42.6.0'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.assertj:assertj-core:3.24.2'
	testImplementation 'com.h2database:h2:2.1.214'
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.1.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
